--- a/style/main.css
+++ b/style/main.css
@@ -16,14 +16,14 @@ body, html {
      padding:0; margin:0; width:100%; height: 100%;
     }
 body {
-    background:  url('/assets/cover.jpg');
+    background:  url(../assets/cover.jpg);
     align-items: center;
     display: flex;
     height: 100%;
 }
 .container:before {
     content: '';
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.5), rgba(0,0,0,0));    content: "";
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.5), rgba(0,0,0,0)); 
     display: block;
     height: 50%;
     left: 0;
@@ -258,7 +258,7 @@ body {
     display: block;
 }
 
-.card-wrapper-selectr ~ .additional-information-disable, .card-wrapper ~ .additional-information-select, .card-wrapper ~ .additional-information-disable,
+.card-wrapper-select ~ .additional-information-disable, .card-wrapper ~ .additional-information-select, .card-wrapper ~ .additional-information-disable,
 .card-wrapper-select ~ .additional-information-default, .card-wrapper-disable ~ .additional-information-default, .card-wrapper-disable ~ .additional-information-select{
     display: none;
 }
