--- a/style/main.css
+++ b/style/main.css
@@ -69,7 +69,7 @@ body {
     margin-right: 40px;
     position: relative;
     max-height: 490px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .card-wrapper {
@@ -152,6 +152,7 @@ body {
 }
 
 .link {
+    cursor: pointer;
     font-weight: bold;
     text-decoration: none;
     color: #1698d9;
@@ -273,5 +274,16 @@ body {
     }
     .col {
         margin-bottom: 40px;
+    }
+}
+@media screen and (max-width: 992px) and (min-width:769px) {
+    .col {
+        width: 33%;
+    }
+}
+@media screen and (max-width: 768px) {
+    .row {
+        flex-flow: column wrap;
+        
     }
 }
