--- a/dev/style/card.css
+++ b/dev/style/card.css
@@ -1,77 +1,3 @@
-@font-face {
-    font-family: 'Exo 2 Thin';
-    src: url("../fonts/Exo2.0-Thin.otf");
-    font-weight: 100;
-    font-style: normal;
-  }
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-
-
-
-body, html {
-     padding:0; margin:0; width:100%; height: 100%;
-    }
-body {
-    background:  url(../assets/cover.jpg);
-    align-items: center;
-    display: flex;
-    height: 100%;
-}
-.container:before {
-    content: '';
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.5), rgba(0,0,0,0)); 
-    display: block;
-    height: 50%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-}
-.container::after {
-    content: '';
-    background-image: linear-gradient(360deg, rgba(0,0,0,0.5), rgba(0,0,0,0));
-    display: block;
-    height: 50%;
-    left: 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: -1;
-}
-
-.container {
-    margin: 0 auto;
-    text-align: center;
-}
-.title {
-    margin-bottom: 27px;
-    font-family: 'Exo 2 Thin', sans-serif;
-    font-size: 32px;
-    font-weight: 100;
-    font-style: normal;
-    color: #fff;
-}
-.row {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-/* card wrapper */
-.col {
-    margin-left: 40px;
-    margin-right: 40px;
-    position: relative;
-    max-height: 490px;
-    margin-bottom: 30px;
-}
-
 .card-wrapper {
     justify-content: center;
     align-items: center;
@@ -96,7 +22,7 @@ body {
     align-items: flex-start;
      */
     z-index: 1;
-    background: url(../assets/card-bg.png) no-repeat bottom left,linear-gradient(135deg, transparent 29px, #f2f2f2 0);
+    background: url(/img/card-bg.png) no-repeat bottom left,linear-gradient(135deg, transparent 29px, #f2f2f2 0);
     text-align: left;
     font-weight: 400;
     border-radius: 10px;
@@ -262,28 +188,4 @@ body {
 .card-wrapper-select ~ .additional-information-disable, .card-wrapper ~ .additional-information-select, .card-wrapper ~ .additional-information-disable,
 .card-wrapper-select ~ .additional-information-default, .card-wrapper-disable ~ .additional-information-default, .card-wrapper-disable ~ .additional-information-select{
     display: none;
-}
-
-
-@media screen and (max-width: 1220px) {
-    html {
-        height: auto;
-    }
-    .title {
-        margin-top: 40px;
-    }
-    .col {
-        margin-bottom: 40px;
-    }
-}
-@media screen and (max-width: 992px) and (min-width:769px) {
-    .col {
-        width: 33%;
-    }
-}
-@media screen and (max-width: 768px) {
-    .row {
-        flex-flow: column wrap;
-        
-    }
 }
