--- a/dev/style/card.css
+++ b/dev/style/card.css
@@ -22,7 +22,7 @@
     align-items: flex-start;
      */
     z-index: 1;
-    background: url(/img/card-bg.png) no-repeat bottom left,linear-gradient(135deg, transparent 29px, #f2f2f2 0);
+    background: url(../img/card-bg.png) no-repeat bottom left,linear-gradient(135deg, transparent 29px, #f2f2f2 0);
     text-align: left;
     font-weight: 400;
     border-radius: 10px;
