--- a/dev/style/main.css
+++ b/dev/style/main.css
@@ -1,88 +1,86 @@
 @font-face {
-    font-family: 'Exo 2 Thin';
-    src: url(../build/fonts/Exo2.0-Thin.otf);
-    src: url(/build/fonts/Exo2_0Thin.eot);
-    src: url(/build/fonts/Exo2_0Thin.eot) format('embedded-opentype'),
-       url(/build/fonts/Exo2_0Thin.woff2) format('woff2'),
-       url(/build/fonts/Exo2_0Thin.woff) format('woff'),
-       url(/build/fonts/Exo2_0Thin.ttf) format('truetype'),
-       url(/build/fonts/Exo2_0Thin.svg#Exo2_0Thin) format('svg');
-    font-weight: 100;
-    font-style: normal;
-  }
- 
+	font-family: 'Exo 2 Thin';
+	src: url(/fonts/Exo2.0-Thin.otf);
+	src: url(/fonts/Exo2_0Thin.eot);
+	src: url(/fonts/Exo2_0Thin.eot) format('embedded-opentype'),
+        url(/fonts/Exo2_0Thin.woff2) format('woff2'),
+        url(/fonts/Exo2_0Thin.woff) format('woff'),
+        url(/fonts/Exo2_0Thin.ttf) format('truetype'),
+        url(/fonts/Exo2_0Thin.svg#Exo2_0Thin) format('svg');
+	font-weight: 100;
+	font-style: normal;
+}
 
-
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-
-
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 
 body, html {
-     padding:0; 
-     margin:0; 
-     width:100%;
-     height: 100%;
-    }
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+}
+
 body {
-    background:  url(../img/cover.jpg);
-    align-items: center;
-    display: flex;
-    height: 100%;
+	background: url(../img/cover.jpg);
+	align-items: center;
+	display: flex;
+	height: 100%;
 }
+
 .container:before {
-    content: '';
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.5), rgba(0,0,0,0)); 
-    display: block;
-    height: 50%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: -1;
+	content: '';
+	background-image: linear-gradient(180deg, rgba(0,0,0,0.5), rgba(0,0,0,0));
+	display: block;
+	height: 50%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: -1;
 }
+
 .container::after {
-    content: '';
-    background-image: linear-gradient(360deg, rgba(0,0,0,0.5), rgba(0,0,0,0));
-    display: block;
-    height: 50%;
-    left: 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: -1;
+	content: '';
+	background-image: linear-gradient(360deg, rgba(0,0,0,0.5), rgba(0,0,0,0));
+	display: block;
+	height: 50%;
+	left: 0;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
 }
 
 .container {
-    margin: 0 auto;
-    text-align: center;
+	margin: 0 auto;
+	text-align: center;
 }
+
 .title {
-    margin-bottom: 27px;
-    font-family: 'Exo 2 Thin';
-    font-size: 32px;
-    font-weight: 100;
-    font-style: normal;
-    color: #fff;
+	margin-bottom: 27px;
+	font-family: 'Exo 2 Thin';
+	font-size: 32px;
+	font-weight: 100;
+	font-style: normal;
+	color: #fff;
 }
+
 .row {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 /* card wrapper */
 .col {
-    margin-left: 40px;
-    margin-right: 40px;
-    position: relative;
-    max-height: 490px;
-    margin-bottom: 30px;
+	margin-left: 40px;
+	margin-right: 40px;
+	position: relative;
+	max-height: 490px;
+	margin-bottom: 30px;
 }
-
-
-
