--- a/dev/style/main.css
+++ b/dev/style/main.css
@@ -1,12 +1,12 @@
 @font-face {
 	font-family: 'Exo 2 Thin';
-	src: url(/fonts/Exo2.0-Thin.otf);
-	src: url(/fonts/Exo2_0Thin.eot);
-	src: url(/fonts/Exo2_0Thin.eot) format('embedded-opentype'),
-        url(/fonts/Exo2_0Thin.woff2) format('woff2'),
-        url(/fonts/Exo2_0Thin.woff) format('woff'),
-        url(/fonts/Exo2_0Thin.ttf) format('truetype'),
-        url(/fonts/Exo2_0Thin.svg#Exo2_0Thin) format('svg');
+	src: url(../fonts/Exo2.0-Thin.otf);
+	src: url(../fonts/Exo2_0Thin.eot);
+	src: url(../fonts/Exo2_0Thin.eot) format('embedded-opentype'),
+        url(../fonts/Exo2_0Thin.woff2) format('woff2'),
+        url(../fonts/Exo2_0Thin.woff) format('woff'),
+        url(../fonts/Exo2_0Thin.ttf) format('truetype'),
+        url(../fonts/Exo2_0Thin.svg#Exo2_0Thin) format('svg');
 	font-weight: 100;
 	font-style: normal;
 }
